deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ussd-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 7500
  selector:
    app: ussd
