deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ussd-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "utility.ussd.janikibichi.com"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: ussd-service
              servicePort: 80
